--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^8.3.9",
     "@ston-fi/api": "^0.29.0",
     "@ston-fi/sdk": "^2.7.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.91.0",
     "@tanstack/react-router": "^1.139.3",
