--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-router": "^1.139.0",
     "@tanstack/router-vite-plugin": "^1.139.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
