feat: implement wallet encryption and auto-load functionality from localStorage

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ VITE_TONCENTER_API_KEY=
 
 # Example:
 # VITE_TONCENTER_API_KEY=your_api_key_here
+
+# Wallet Encryption
+# This key is used to encrypt the wallet mnemonic in localStorage
+# IMPORTANT: Change this to a unique random string in production!
+# Generate with: openssl rand -base64 32
+VITE_WALLET_ENCRYPTION_KEY=
