--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://caustically-continuous-alligator.cloudpub.ru",
+  "url": "https://ton.org",
   "name": "TON DApp (Dev)",
   "iconUrl": "https://ton.org/favicon.ico",
   "termsOfUseUrl": "https://example.com/terms",
